--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>ch.hackzurich2019</groupId>
     <artifactId>engine</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-language</artifactId>
+            <version>1.90.0</version>
+        </dependency>
+    </dependencies>
 </project>
