--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>spark-core</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>me.xdrop</groupId>
+            <artifactId>fuzzywuzzy</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 </project>
